--- a/Diplomski_LovroMarković.tex
+++ b/Diplomski_LovroMarković.tex
@@ -26,16 +26,17 @@
 
 %counter reset - counteri za equatione figure itd.
 \usepackage{chngcntr}
-\counterwithin*{equation}{section}
-\counterwithin*{equation}{subsection}
-\counterwithin*{figure}{section}
+\counterwithout*{equation}{chapter}
+%\counterwithin*{equation}{subsection}
+% \counterwithin*{figure}{section}
+\counterwithout*{figure}{chapter}
 \counterwithin*{figure}{subsection}
 
 %pretty formating - formatiranje raznih 
 \renewcommand{\thechapter}{\arabic{chapter}}
 \renewcommand{\thesection}{\arabic{chapter}.\arabic{section}}
-\renewcommand{\theequation}{\arabic{section}-\arabic{equation}}
-\renewcommand{\thefigure}{\arabic{section}-\arabic{figure}}
+\renewcommand{\theequation}{\arabic{chapter}-\arabic{equation}}
+\renewcommand{\thefigure}{\arabic{chapter}-\arabic{figure}}
 
 %centering figure captions - workaround!
 {\makeatletter\long\gdef\@gobble#1{}}
@@ -359,12 +360,92 @@ TODO
 			0			&	-\omega_z	& 	\omega_y \\
 			\omega_z	&	0			& 	-\omega_x \\
 			-\omega_y	&	\omega_x	&	0
-		\end{bmatrix} \, , \, \hat{x}: \mathbb{R}^3 \rightarrow so(3)
+		\end{bmatrix} \, , \, \hat{\cdot}: \mathbb{R}^3 \rightarrow so(3)
 	\end{equation}
 	
-	\noindent Gdje kapa-operator mapiranje iz Realnog 3-dimenzionalnog prostora prema Lijevoj algebri $so(3)$. Njemu inverzan operator je v-operator koja je definirana kao $\check{x}:so(3) \rightarrow \mathbb{R}^3$.
+	\noindent Gdje kapa-operator mapiranje iz Realnog 3-dimenzionalnog prostora prema Lijevoj algebri $so(3)$. Njemu inverzan operator je v-operator koja je definirana kao $\check{\cdot}:so(3) \rightarrow \mathbb{R}^3$.
 	
 \chapter{Matematički model letjelice}
+
+\paragraph{}U ovom radu kao sustav upravljanja razmatra se multirotorska letjelica sa četiri rotora postavljena u plus konfiguraciju. Kao pomoć pri prikazivanju jednadžbi odabrana su dva koordinatna sustava: 
+\begin{itemize}
+	\item Globalni: $\{\vec{e}_1, \vec{e}_2, \vec{e}_3\}$
+	\item Lokalni - tijelo letjelice: $\{\vec{b}_1, \vec{b}_2, \vec{b}_3\}$
+\end{itemize}
+
+\noindent Općenite jednadžbe gibanja takvog sustava su:
+\begin{gather}
+	\dot{x} = v \\
+	m \dot{v} = mge_3 - fRe_3 \\
+	\dot{R} = R\hat{\Omega} \\
+	J\dot{\Omega} + \Omega \times J\Omega = M
+\end{gather}
+
+gdje je:
+\begin{itemize}
+	\item $x \in \mathbb{R}^3$ - trenutna pozicija letjelice
+	
+	\item $m \in \mathbb{R}$ - ukupna masa letjelice
+	
+	\item $f \in \mathbb{R}$ - ukupni potisak letjelice 
+	
+	\item $R \in SO(3)$ - matrica rotacije iz lokalnog u globalni koordinatni sustav
+	
+	\item $\Omega \in \mathbb{R}^3$ - kutna brzina letjelice u lokalnom koordinatnom sustavu
+	
+	\item $J \in \mathbb{R}^{3\times3}$ - matrica inercije letjelice s obzirom na lokalni koordinatni sustav
+	
+	\item $M \in \mathbb{R}^3$ - ukupni moment letjelice s obzirom na lokalni koordinatni sustav
+\end{itemize}
+
+\noindent Budući da se upravlja brzinom vrtnje rotora potrebna je poveznica sa ukupnom silom i ukupnim momentima. Ta dva pojma povezana su preko sile koju generira pojedini rotor $f_i$, a veza je slijedeća:
+
+\begin{gather}
+	f_i = \zeta_i b_f \Omega_{i}^2 \\
+	M_i = b_m f_i
+\end{gather}
+
+gdje je:
+\begin{itemize}
+	\item $\zeta_i = 1,\, i = 2, 4$, $\zeta_i = -1,\, i=1,3$ zbog različitih smjerova vrtnje rotora
+	\item $b_f$ - konstanta potiska motora
+	\item $b_m$ - kontatnta momenta motora
+\end{itemize}
+
+\newpage
+\clearpage
+
+Radi lakše pretvorbe uvodi se matrični zapis na slijedeći način: 
+
+\begin{equation}
+	\begin{bmatrix}
+		f \\
+		M_1 \\
+		M_2 \\
+		M_3 
+	\end{bmatrix} 
+	=
+	\begin{bmatrix}
+		1	&	1	&	1	&	1 \\
+		0	&	d	&	0	&	-d \\
+		-d 	&	0	&	d	&	0 \\
+		b_m &	-b_m	& 	b_m	& -b_m
+	\end{bmatrix}
+	\cdot
+	\begin{bmatrix}
+		f_1 \\
+		f_2 \\
+		f_3 \\
+		f_4
+	\end{bmatrix}
+\end{equation}
+
+\begin{figure}[h!]
+	\includegraphics[width=\textwidth]{model.png}
+	\caption{Vizualni prikaz letjelice i koordinatnih osi.}
+\end{figure}
+
+\todo[inline]{spomenuti morusa i pokretne mase}
 \chapter{Geometrijsko upravljanje}
 \chapter{Analiza simulacije}
 \chapter{Zaključak}
