--- a/Diplomski_LovroMarković.tex
+++ b/Diplomski_LovroMarković.tex
@@ -496,8 +496,8 @@ Napomena: svi parametri modela letjelice nalaze se na github repozitoriju u moru
 	
 \section{Pogreške praćenja reference}
 
-	\paragraph{}Prije nego se započne sinteza geometrijskog regulatora potrebno je definirati funkcije pogrešaka pozicije, orijentacije te linearne i kutne brzine s obzirom na željenu vrijednost (u ostatku teksta sadrži d - \textit{desired} u subskriptu) i trenutnu vrijednost. \\
-	Pogreške u poziciji i linearnoj brzini kao translacijski dio SE(3) grupe dane su kao:
+	\paragraph{}Prije nego se započne sinteza geometrijskog regulatora potrebno je definirati funkcije pogrešaka pozicije, orijentacije te linearne i kutne brzine s obzirom na željenu vrijednost (u ostatku teksta takvi simboli sadrži d - \textit{desired} u subskriptu) i trenutnu vrijednost. \\
+	Pogreške u poziciji i linearnoj brzini dane su kao:
 	\begin{gather}
 		e_x = x - x_d \\
 		e_v = v - v_d
