--- a/Diplomski_LovroMarkovi.tex
+++ b/Diplomski_LovroMarkovi.tex
@@ -1,4 +1,3 @@
-% !TeX spellcheck = hr_HR
 \documentclass[times, utf8, diplomski]{fer}
 \usepackage{booktabs}
 % razno
@@ -51,7 +50,8 @@
 \newcommand{\Va}{\pazocal{V}}
 \newcommand{\Ua}{\pazocal{U}}
 \newcommand{\Aa}{\pazocal{A}}
-
+\newcommand{\Ta}{\pazocal{T}}
+\newcommand{\La}{\pazocal{L}}
 
 \usepackage{amsmath}
 
@@ -106,7 +106,6 @@ TODO
 
 \chapter{Diferencijalna geometrija}
 
-\section{Uvod}
 	\paragraph{} Upravljanje mehaničkim sustavima u nastavku ćemo provoditi geometrijskih metodama, odnosno metodama diferencijalne geometrije. Osnovna konstrukcija u diferencijalnoj geometriji je manifold. Ugrubo to je skup koji lokalno izgleda kao otvoreni podskup Euklidskog prostora. Na taj način manifold se može preciznije analizirati koristeći poznate konstrukcije iz analize Euklidskih prostora. \\ 
 	Jedna bitna razlika između manifolda i Euklidskih prostora jest koordinatna invarijantnost. Postoji više načina pomoću kojih u manifoldu možemo naći lokalnu sličnost sa Euklidskim prostorom, ali je ključno da su te metode neovisne o proizvoljnim izborima kao što su pristranost određenim koordinatnim sustavim i slično. To ne znači da se ne potiče korištenje koordinatnih sustava već da same metode i koncepti koji su korišteni budu koordinatno invarijantni, ali prikazani u željenim koordinatama. \\
 	U nastaku bit će definirana lokalna sličnost manifolda Euklidskom prostoru.
@@ -140,7 +139,6 @@ TODO
 `	
 	\end{enumerate}
 	
-	
 \section{Diferencijalne mape višeg reda}
 
 	\paragraph{} Neka je $\Ua$ otvoreni podskup $\mathbb{R}^n$ i neka je mapa $f: \Ua \rightarrow \mathbb{R}^m$ tada:
@@ -171,7 +169,7 @@ TODO
 	Na isti način može se definirati i glatki manifold, odnosno $\boldsymbol{C}^\infty$-manifold. Takav manifold sadrži glatku diferencijalnu strukturu što podrazumijeva glatke mape preslikavanja u Euklidski prostor. U nastavku razmatrat će se upravo takve vrste manifolda.
 	
 	\begin{figure}[h]
-		\includegraphics[width=\textwidth]{fig_overlap_charts.png}
+		\includegraphics[width=\textwidth]{figures/fig_overlap_charts.png}
 		\caption{Grafički prikaz manifolda M te transportnih funkcija $\varphi$ i $\psi$ od manifolda $M$ prema $\mathbb{R}^2$ te prikaz kompozicije transportnih mapa kao vezu između slika preklopnih dijelova $\Ua$ i $\Va$ u Euklidskom prostoru.}
 	\end{figure}
 
@@ -179,9 +177,9 @@ TODO
 
 	Neka je M manifold. Tada se može konstruirati vektorski prostor nad $\mathbb{R}$ na slijedeći način: $(\boldsymbol{C}^\infty(M), +, \cdot)$, gdje je $\boldsymbol{C}^\infty(M) = \{ f: M \rightarrow \mathbb{R} \ | f \,je\, glatka\}$. Dakle, definiran je vektorski prostor kao skup svih glatkih mapa $f$ sa pridruženim operatorima zbrajanja i množenja. 
 	
-	\paragraph{Krivulja na manifoldu:} Neka je definirana krivulja na manifoldu kao glatka mapa $\gamma:\mathbb{R} \rightarrow M$, gdje je $\mathbb{R}$ promatran kao 1-dimenzionalni manifold.
+	\subsection{Krivulja na manifoldu} Neka je definirana krivulja na manifoldu kao glatka mapa $\gamma:\mathbb{R} \rightarrow M$, gdje je $\mathbb{R}$ promatran kao 1-dimenzionalni manifold.
 	
-	\paragraph{Operator usmjerene derivacije:} Neka je $\gamma: \mathbb{R} \rightarrow M$ glatka krivulja kroz točku $p\in M$ te bez gubljenja općenitosti može se uzima se da vrijedi $\gamma(0) = p$. Tada se može definirati operator usmjerene derivacije duž krivulje $\gamma$ u točki $p$ kao mapu na slijedeći način: \\
+	\subsection{Operator usmjerene derivacije} Neka je $\gamma: \mathbb{R} \rightarrow M$ glatka krivulja kroz točku $p\in M$ te bez gubljenja općenitosti može se uzima se da vrijedi $\gamma(0) = p$. Tada se može definirati operator usmjerene derivacije duž krivulje $\gamma$ u točki $p$ kao mapu na slijedeći način: \\
 	\begin{gather}
 		X_{\gamma, p} : \boldsymbol{C}^\infty(M) \rightarrow R \\
 		f \mapsto (f \circ \gamma)'(0)
@@ -189,17 +187,16 @@ TODO
 	Bitno je primijetiti kako je kompozicija $(f \circ \gamma)$ mapiranje unutar realnog prostora tako da se toj funkciji na uobičajan način može pronaći i evaluirati derivacija.
 	Intuitivno gledano $X_{\gamma, p}$ je brzina krivulje $\gamma$ u točki $p$.
 	
-	\paragraph{Tangencijalni prostor:} Neka je M manifold koji sadrži točku $p$. Tada je tangencijalni prostor vektorski prostor nad $\mathbb{R}$ sa skupom operatora usmjerene derivacije tako da vrijedi: \\
+	\subsection{Tangencijalni prostor} Neka je M manifold koji sadrži točku $p$. Tada je tangencijalni prostor vektorski prostor nad $\mathbb{R}$ sa skupom operatora usmjerene derivacije tako da vrijedi: \\
 	$T_p M := \{ X_{\gamma, p} \, | \, \gamma \, je \, glatka \, krivulja \, kroz \, p\}$ te sa nadodanim operatorima zbrajanja i skalarnog množenja.
 	
 	\begin{figure}[h!]
-		\includegraphics[width=\textwidth]{txm.png}
+		\includegraphics[width=\textwidth]{figures/txm.png}
 		\caption{Na slici je prikazan manifold M. Parametrirana krivulja $\gamma(t)$ koja prolazi točkom $x$. Tangencijalni prostor manifolda M u točki x $T_x M$ te vektor usmjerene derivacije $v$ krivulje $\gamma (t)$ u točki $x$. }
 	\end{figure}
 	
 \chapter{Lijeve grupe i Lijeva algebra}
 
-\section{Uvod}
 
 	\paragraph{}Lijeva teorija je od velike važnosti i u fizici i u diferencijalnoj geometriji. U ovom dijelu bit će predstavljen koncept Lijeve grupe te pripadajuće Lijeve algebre. Fokus će biti usmjeren prema Specijalnim Euklidskim grupama SE(3) budući da su one predmet zanimljive u kontekstu ovog rada.
 	
@@ -234,19 +231,19 @@ TODO
 
 	\paragraph{}U ovom dijelu bit će definirano nekoliko različitih Lijevih grupa s konačnim ciljem definiranja specijalne ortogonalne grupe SO(3) te njenog proširenja na specijalnu Euklidsku grupu SE(3). 	
 	
-	\paragraph{N-dimenzijska translacijska grupa:} Mapa $\varphi$ je kruta mapa ako vrijedi 
+	\subsection{N-dimenzijska translacijska grupa} Mapa $\varphi$ je kruta mapa ako vrijedi 
 	$\forall v, w \in \mathbb{R}^n, \, d(\varphi(v), \, \varphi(w)) = d(v, w)$. Drugim riječima mapa je kruta ako su nakon mapiranja duljine očuvane. \\
 	Neka je skup $G$ sačinjena od svih krutih mapa tako da vrijedi $G = \{ \varphi: \mathbb{R}^n \rightarrow \mathbb{R}^n \, | \, \varphi\, je\, kruta\, mapa\} := T(n)$. Ako se skupu $T(n)$ pridruži operator kompozicije tada se dobiva translacijska Lijeva grupa $(T(n), \circ)$.
 	
-	\paragraph{Opća linearna grupa (\textit{"General linear group"}):} Neka je skup G sačinjen od matrica, tj. mapa $\varphi$ tako da vrijedi $G = \{ \varphi: \mathbb{R}^n \rightarrow \mathbb{R}^n \,|\, det \, \varphi \neq 0 \}:=GL(n, \mathbb{R}^n)$. Ako bi tome skupu pridodali operator kompozicije $\circ$ tada možemo definirati Lijevu grupu $(GL(n, \mathbb{R}^n), \circ)$. To je dakle grupa svih invertibilnih matrica koje svoje karakteristike glatkog manifolda naslijeđuju činjenicom da su takve matrice otvoreni podskup grupe svih nxn matrica $\mathbb{R}^{n^2}$ koje čine glatki manifold.
+	\subsection{Opća linearna grupa (\textit{"General linear group"})} Neka je skup G sačinjen od matrica, tj. mapa $\varphi$ tako da vrijedi $G = \{ \varphi: \mathbb{R}^n \rightarrow \mathbb{R}^n \,|\, det \, \varphi \neq 0 \}:=GL(n, \mathbb{R}^n)$. Ako bi tome skupu pridodali operator kompozicije $\circ$ tada možemo definirati Lijevu grupu $(GL(n, \mathbb{R}^n), \circ)$. To je dakle grupa svih invertibilnih matrica koje svoje karakteristike glatkog manifolda naslijeđuju činjenicom da su takve matrice otvoreni podskup grupe svih nxn matrica $\mathbb{R}^{n^2}$ koje čine glatki manifold.
 	\todo[inline]{Reci da je Rn2 stvarno glatki manifold (u appendixu?)}
 	
-	\paragraph{(Specijalna) Ortogonalna grupa:} Neka je skup G sačinjen od matrica $Q$ tako da vrijedi \\ 
+	\subsection{(Specijalna) Ortogonalna grupa} Neka je skup G sačinjen od matrica $Q$ tako da vrijedi \\ 
 	$G = \{ Q \in GL(n, \mathbb{R}^n) \,|\, det \, Q = \pm 1\} := O(n)$. Budući da su matrice elementi skupa $GL(n, \mathbb{R}^n)$ njima se može pridodijeliti i naslijeđeni operator $\circ$. Takva Lijeva grupa $(O(n),\circ)$ zove se ortogonalna grupa. \\
 	Specijalna ortogonalna grupa $SO(n)$ je podgrupa ortogonalnoj grupi, uz uvjet da matrice moraju imati determinante jednake 1. Ta grupe se ujedno naziva i rotacijska grupa jer sadrži sve rotacijske matrice. \\
 	Obje grupe lančano naslijeđuju karakteristike glatkog manifolda od opće linearne grupe.
 	
-	\paragraph{(Specijalna) Euklidska grupa:} Euklidska grupa kao podgrupe sadrži translacijsku Lijevu grupu $T(n)$ i ortogonalnu grupu $O(n)$. Svaki element u $E(n)$ sastoji se od translacije koju slijedi ortogonalna transformacija. \\
+	\subsection{(Specijalna) Euklidska grupa} Euklidska grupa kao podgrupe sadrži translacijsku Lijevu grupu $T(n)$ i ortogonalnu grupu $O(n)$. Svaki element u $E(n)$ sastoji se od translacije koju slijedi ortogonalna transformacija. \\
 	Specijalna Euklidska grupa kao podskup umjesto ortogonalne grupe sadrži specijalnu ortogonalnu grupu. U tom slučaju svaki član te grupe sadrži translaciju koju slijedi rotacija. Elementi te grupe su (n+1)x(n+1) matrice slijedećeg oblika: \\
 	
 	\begin{equation}
@@ -264,7 +261,7 @@ TODO
 
 \section{Lijeva algebra}
 
-	\paragraph{Algebra:} Algebra nad poljem K je skup od četiri elemenata $(A, +, \cdot, \bullet)$, gdje je $(A, +, \cdot)$ vektorski prostor nad poljem K, a $\bullet$ je produkt nad A, tj. bilinearno mapiranje: $\bullet : A \times A \rightarrow A$. \\
+	\subsection{Algebra} Algebra nad poljem K je skup od četiri elemenata $(A, +, \cdot, \bullet)$, gdje je $(A, +, \cdot)$ vektorski prostor nad poljem K, a $\bullet$ je produkt nad A, tj. bilinearno mapiranje: $\bullet : A \times A \rightarrow A$. \\
 	Algebra $(A, +, \cdot, \bullet)$ može biti:
 	\begin{enumerate}
 		\item Asocijativna ako vrijedi $\forall v, w, z \in A : v \bullet (w \bullet z) = (v \bullet w) \bullet z$
@@ -274,7 +271,7 @@ TODO
 		\item Komutativna ili abelijanska ako vrijedi $\forall v, w \in A : v \bullet w = w \bullet v$
 	\end{enumerate}
 	
-	\paragraph{Lijeva algebra:} Lijeva algebra je algebra čiji operator je Lijeva zagrada $[-,-]$ (tipično zvana komutator) za koju vrijede svojstva: 
+	\subsection{Lijeva algebra} Lijeva algebra je algebra čiji operator je Lijeva zagrada $[-,-]$ (tipično zvana komutator) za koju vrijede svojstva: 
 	
 	\begin{enumerate}
 		
@@ -286,9 +283,9 @@ TODO
 	
 	Iz uvjeta o antisimetričnosti odmah vrijedi $[v,w]=-[w,v]$. Kod asocijativnih algebri komutator se definira kao $[v,w]:=v \bullet w - w \bullet v$.
 	
-	\paragraph{Lijeva algebra Lijeve grupe:} Svaka Lijeva grupa ima svoju pripadajuću Lijevu algebru. Lijeva algebra $g$ od Lijeve grupe $G$ je tangencijalni prostor oko točke identiteta $T_e G$.
+	\subsection{Lijeva algebra Lijeve grupe} Svaka Lijeva grupa ima svoju pripadajuću Lijevu algebru. Lijeva algebra $g$ od Lijeve grupe $G$ je tangencijalni prostor oko točke identiteta $T_e G$.
 	
-	\paragraph{Eksponencijalna mapa:} Poveznica između Lijeve grupe i njene pripadajuće Lijeve algebre je eksponencijalna mapa. Ona je definirana na slijedeći način: $exp: T_eG \rightarrow	G$, tj. $exp: g \rightarrow G.$ \\ Postoji i logaritamska mapa koja služi za inverno mapiranje od Lijeve grupe prema pripadajućoj algebri.
+	\subsection{Eksponencijalna mapa} Poveznica između Lijeve grupe i njene pripadajuće Lijeve algebre je eksponencijalna mapa. Ona je definirana na slijedeći način: $exp: T_eG \rightarrow	G$, tj. $exp: g \rightarrow G.$ \\ Postoji i logaritamska mapa koja služi za inverno mapiranje od Lijeve grupe prema pripadajućoj algebri.
 
 \todo[inline]{Definirati diferencijalne mape između tangencijalnih prostora}
 \section{Algebra specijalne ortogonalne grupe $so(3)$}
@@ -442,14 +439,12 @@ Radi lakše pretvorbe uvodi se matrični zapis na slijedeći način:
 \end{equation}
 
 \begin{figure}[h!]
-	\includegraphics[width=\textwidth]{model.png}
+	\includegraphics[width=\textwidth]{figures/model.png}
 	\caption{Vizualni prikaz letjelice i koordinatnih osi.}
 \end{figure}
 Napomena: svi parametri modela letjelice nalaze se na github repozitoriju u morus\_description ROS paketu.
 \todo[inline]{spomenuti morusa i pokretne mase staviti referencu na github}
 \chapter{Geometrijsko upravljanje}
-
-	\section{Uvod}
 	
 	\paragraph{}Ako se pri upravljanju sustavima njegov konfiguracijski prostor, odnosno njegove varijable stanja, shvaća kao glatki manifold tada se govori o geometrijskom upravljanju sustavima. Kao što je već rečeno, jedna od prednosti pri upravljanju u prostoru manifolda jest koordinatna invarijantnost. Nakon što je odabran i fiksiran početni koordinatni sustav svo daljnje upravljanje je neovisno o trenutnoj konfiguraciji sustava. \\
 	Neka je definiran sustav:
@@ -464,7 +459,7 @@ Napomena: svi parametri modela letjelice nalaze se na github repozitoriju u moru
 		\dot{x} = f(x(t),\, u(t)), \, x(t)\in M, \, u(t)\in \Ua \subset \mathbb{R}^m
 	\end{equation}
 	\begin{figure}[h!]
-		\includegraphics[width=\textwidth, height=5cm]{krivulja.png}
+		\includegraphics[width=\textwidth, height=5cm]{figures/krivulja.png}
 		\caption{Krivulja rješenja sustava uz dodane upravljačke funkcije $u_1(t)$, $u_2(t)$ i $u_3(t)$}
 	\end{figure}
 	
@@ -477,7 +472,7 @@ Napomena: svi parametri modela letjelice nalaze se na github repozitoriju u moru
 	Jedna od prednosti ovakvog načina upravljanja javlja se prilikom prikaza orijentacije sustava pomoću rotacijske matrice koja jasno definira vektore lokalnog koordinatnog sustava. Kod klasičnog upravljanja korištenjem Eulerovih kuteva javljaju se singulariteti. Ako je definiran neki redoslijed rotacija oko osi (npr. $x \rightarrow y \rightarrow z$) te ako je druga po redu rotacija za kut 90 ili 270 tada se dešava tzv. \textit{"Gimbal lock"}. U tom trenutku se gubi 5jedan stupanj slobode, odnosno preostale dvije rotacije se odvijaju oko iste osi.
 	
 	\begin{figure}[h!]
-		\includegraphics[width=\textwidth]{gimbal_lock.png}
+		\includegraphics[width=\textwidth]{figures/gimbal_lock.png}
 		\caption{Prikaz preklapanja osi prilikom Eulerovih rotacija. Na desnoj slici može se vidjeti kako će rotacije oko x i z osi biti istovjetne.}
 	\end{figure}
 	
@@ -488,7 +483,7 @@ Napomena: svi parametri modela letjelice nalaze se na github repozitoriju u moru
 	\clearpage
 
 	\begin{figure}[h!]
-		\includegraphics[width=\textwidth, height=5cm]{controller.png}
+		\includegraphics[width=\textwidth, height=5cm]{figures/controller.png}
 		\caption{Prikaz kaskadne strukture geometrijskog kontrolera.}
 	\end{figure}
 	
@@ -496,20 +491,94 @@ Napomena: svi parametri modela letjelice nalaze se na github repozitoriju u moru
 	
 \section{Pogreške praćenja reference}
 
-	\paragraph{}Prije nego se započne sinteza geometrijskog regulatora potrebno je definirati funkcije pogrešaka pozicije, orijentacije te linearne i kutne brzine s obzirom na željenu vrijednost (u ostatku teksta takvi simboli sadrži d - \textit{desired} u subskriptu) i trenutnu vrijednost. \\
-	Pogreške u poziciji i linearnoj brzini dane su kao:
+	\paragraph{}Prije nego se započne sinteza geometrijskog regulatora potrebno je definirati funkcije pogrešaka pozicije, orijentacije te linearne i kutne brzine s obzirom na željenu vrijednost (u ostatku teksta takvi simboli sadrži d - \textit{desired} u subskriptu) i trenutnu vrijednost.
+	
+	\noindent Kako bi se definirale pogreške orijentacije i kutne brzine nad prostorom grupe SO(3) bit će potrebno uvesti nekoliko pojmova.
+	\subsection{Funkcija pogreške praćenja reference} Neka je Q manifold. Tada se definira funkcija pogreške konfiguracije $\Psi : Q \times Q \rightarrow \mathbb{R}$. Neka je takva funkcija simetrična: $\Psi(q, r) = \Psi(r, q), \, \forall q,r\in Q$ te se definira korištenje funkcije sa fiksnom (referentnom) konfiguracijom $r$ kao $\Psi_r(q) = \Psi(q, r)$. \\
+	Nadalje definirani su diferencijali s obzirom na prvi i drugi argument kao: 
 	\begin{gather}
-		e_x = x - x_d \\
-		e_v = v - v_d
+		d_1 \Psi (q, r) = d \Psi_r(q) \in T_q Q \\
+		d_2 \Psi (q, r) = d \Psi_q(r) \in T_r Q
 	\end{gather}
+	
+	\newpage
+	\clearpage
+	Sada se može definirati pogreška praćena reference oko neke konfiguracije $r\in Q$ kao glatka, simetrična i omeđena funkcija pogreške konfiguracije za koju vrijedi: 
+	\begin{enumerate}
+		\item $\Psi(r,r)=0$
+		
+		\item $d_1 \Psi(r, r) = 0$
+		
+		\item $\text{Hess}_1\Psi (r, r)\text{ je pozitivno definitan}$
+	\end{enumerate}
+	
+	\subsection{Prijenosna mapa} Neka se na manifoldu $Q$ se nalaze dvije krivulje brzine za koje vrijedi $\gamma'(t_0)=q$ i $\gamma_{ref}'(t_0)=r$. Kako bi uveli pojam pogreške brzine potrebno je moći usporediti takve dvije krivulje. Budući da one leže u različitim tangencijalnim prostorima $T_r Q$ i $T_q Q$ potrebno je uvesti mapu pomoću koje će se moći provesti ta usporedba. Definira se prijenosna mapa $\Ta(q,r): T_r Q \mapsto T_q Q$.
+	
+	\subsection{Funkcija brzine pogreške praćenja reference} Neka je uzet par koji sačinjava funkcija pogreške praćenja reference i pripadna prijenosna mapa $(\Psi, \Ta)$. Takav par se definira kao kompatibilan ako vrijedi:
+	\begin{equation}
+		d_2\Psi(q,r) = - \Ta(q,r)(d_q\Psi(q,r))
+	\end{equation}
+	\noindent Nadalje Lijeva derivacije funkcije pogreške slijeđenja reference definira se na slijedeći način:
+	\begin{equation}
+		\La_{X_q, Y_r}\Psi(q,r) = d_1\Psi(q,r) \cdot X_q + d_2\Psi(q,r) \cdot Y_r
+	\end{equation}
+	\noindent Ako se primijeni Lijeva derivacija i uvjet kompatibilnosti na funkciju pogreške praćenja reference tada se dobije slijedeća relacija:
+	\begin{align}
+		\frac{d}{dt} \Psi(\gamma(t), \eta(t)) &= d_1\Psi(\gamma(t), \eta(t)) \cdot \gamma '(t) + d_2\Psi(\gamma(t), \eta(t)) \cdot \eta ' (t)\\
+		&= d_1\Psi(\gamma(t), \eta(t)) \cdot \gamma '(t) + (- \Ta(\gamma(t), \eta(t))(d_1\Psi(\gamma(t), \eta(t)) \cdot \eta'(t)) \\
+		&= d_1\Psi(\gamma(t), \eta(t)) \cdot (\gamma '(t) - \Ta(\gamma(t), \eta(t))\eta'(t)) \\
+		&= d_1\Psi(\gamma(t), \eta(t)) \dot{e}(t)
+	\end{align}
+	Dakle, kao pogreška brzine između krivulja $\gamma$ i $\eta$ odabire se $\dot{e}(t)$, a za pogrešku u konfiguraciji uzimat će se diferencijal s obzirom na prvi argument funkcije pogreške praćenja reference $d_1\Psi(\gamma(t), \eta(t)$.
+	
+	\newpage
+	\clearpage
+	
+	\subsection{Funkcije pogreške u SO(3) prostoru}
+	Neka vrijedi da je $R := R(t)$ i $R_d := R_d(t)$. Na prethodno definiran način konstruiran je kompatibilan par $(\Psi_{SO(3)}(R, R_d), \Ta(R, R_d))$ koji glasi:
+	\begin{gather}
+		\Psi_{SO(3)}(R, R_d) = \frac{1}{2} tr[I - R_d^T R] \\
+		\Ta(R, R_d) = R^T R_d
+	\end{gather}
+	
+	Deriviranjem funkcije pogreške praćenja reference dobije se slijedeća relacija:
+	\begin{equation}
+		\frac{d}{dt} \Psi(R, R_d) = \frac{1}{2}(R_d^TR - R^TR_d)^{\text{V}} \cdot (\Omega - R^TR_d\Omega_d)
+	\end{equation}
+	
+	Gdje su kao pogreška konfiguracije $e_R$ i pogreška slijeđenja kutne brzine odabrane kao: 
+	\begin{gather}
+		e_R(R, R_d) = \frac{1}{2}(R_d^TR - R^TR_d)^{\text{V}} \\
+		e_{\Omega}(R, \Omega, R_d, \Omega_d) = \Omega - R^TR_d\Omega_d
+	\end{gather}
+	Izvod se nalazi u dodatku.
 	
 \chapter{Analiza simulacije}
 \chapter{Zaključak}
 Zaključak.
 
-\bibliography{literatura}
-\bibliographystyle{fer}
-
+\chapter{Dodatak}
+	\section{Funkcije pogreške u SO(3) prostoru}
+	
+	U izvodu se koriste slijedeći Lijevi identiteti:
+	\begin{gather}
+		A\in so(3), \,  x\in\mathbb{R}^3 \\
+		A^T = -A \\
+		R \hat{x}R^T = (Rx)^\wedge \\
+		tr(R\hat{x}) = - (A - A^T)^\text{V} \cdot x
+	\end{gather}
+	\begin{align*}
+		\frac{d}{dt}\Psi(R, R_d) &= \frac{d}{dt} ( \frac{1}{2} tr(I - R_d^TR)) \\
+		&= - \frac{1}{2}tr(\dot{R}_d^TR + R_d^T\dot{R}) \\
+		&= - \frac{1}{2}tr( (R_d \hat{\Omega_d})^TR + R_d^TR\Omega ) \\
+		&=  - \frac{1}{2}tr( -\hat{\Omega_d}R_d^TR + R_d^TR\hat{\Omega}) \\
+		&= - \frac{1}{2}tr[ -R_d^TR \, (R^TR_d\hat{\Omega}_dR_d^TR) + R_d^TR\hat{\Omega} ] \\
+		&=  - \frac{1}{2}tr[ -R_d^TR \, (R^TR_d\Omega_d)^\wedge + R_d^TR\hat{\Omega} ] \\
+		&= - \frac{1}{2}tr[ -R_d^TR (\Omega - R^TR_d\Omega_d)^\wedge ] \\
+		&= \frac{1}{2}(R_d^TR - R^TR_d)^\wedge \cdot (\Omega - R^TR_d\Omega_d) \\
+		&= e_R \cdot e_\Omega
+	\end{align*}
+	
 \begin{sazetak}
 Ravijen je nelinearni geometrijski regulator za upravljanje multirotorskom letjelicom s benzinskim motorima. Regulator je implementiran u programskom jeziku C++ u ROS okruženju te ispitan korištenjem simulacijskog okruženja Gazebo na postojećem modelu multirotorske bespilotne letjelice s benzinskim motorima i pokretnim masama.
 
@@ -524,5 +593,9 @@ A nonlinear geometric controller is implemented using C++ programming language w
 \keywords{geometric control, multirotor UAV, Lie groups, SE(3), ROS, Gazebo}
 \end{abstract}
 
-\chapter{literatura}
+
+\bibliography{literatura}
+\bibliographystyle{fer}
+
+\chapter{Literatura}
 \end{document}
